# Zero

./: .gitignore  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json
jerryscript/: .gitignore
jerryscript/jerry-core/: CMakeLists.txt  libjerry-core.pc
jerryscript/jerry-port/default/: libjerry-port-default.pc
src/: main.cc
test/: index.html
